header part added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pharmecy and medicine</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Oswald:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header id="banner">
+        <div class="hero-section">
+            <h1>
+                MEDICINE CENTER
+            </h1>
+            <h1> ON THE GO!</h1>
+            <p>
+                With the new Medicine Centre app, the high-quality service that we are known for is now available via
+                your smartphone.
+            </p>
+            <p>Available on the <span class="link">App Store</span> and <span class="link">Google Play</span></p>
+            <a href="#">Read More</a>
+        </div>
+    </header>
 </body>
 
 </html>
