care unit added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,43 @@
             <a href="#">Read More</a>
         </div>
     </header>
+    <main>
+        <section id="care-unit">
+            <div class="care-card-body">
+                <div class="care-card first">
+                    <img src="images/uro.png" alt="">
+                    <h3>
+                        Urology care
+                    </h3>
+                    <p>
+                        Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                        suscipit ultrices.
+                    </p>
+                </div>
 
+                <div class="care-card second">
+                    <img src="images/neuro.png" alt="">
+                    <h3>
+                        Neurology care
+                    </h3>
+                    <p>
+                        Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                        suscipit ultrices.
+                    </p>
+                </div>
+                <div class="care-card third">
+                    <img src="images/cardio.png" alt="">
+                    <h3>
+                        Cardiology care
+                    </h3>
+                    <p>
+                        Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                        suscipit ultrices.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
