--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section id="care-unit">
             <div class="care-card-body">
-                <div class="care-card first">
+                <div style="background-color: #CCD3DB;" class="care-card">
                     <img src="images/uro.png" alt="">
                     <h3>
                         Urology care
@@ -42,7 +42,7 @@
                     </p>
                 </div>
 
-                <div class="care-card second">
+                <div style="background-color: #858E99;" class="care-card">
                     <img src="images/neuro.png" alt="">
                     <h3>
                         Neurology care
@@ -52,7 +52,7 @@
                         suscipit ultrices.
                     </p>
                 </div>
-                <div class="care-card third">
+                <div style="background-color: #555D66;" class="care-card">
                     <img src="images/cardio.png" alt="">
                     <h3>
                         Cardiology care
@@ -63,6 +63,77 @@
                     </p>
                 </div>
             </div>
+        </section>
+        <section id="services">
+
+            <div class="services-head">
+                <h2>
+                    A MODERN, FULL-SERVICE PHARMACY
+                </h2>
+                <p>
+                    At Medicine Center Compounding Pharmacy, we believe health is not just the absence of disease, but a
+                    state of immense vitality. It is our mission to help you feel better, live longer, and become the
+                    best possible you!
+                </p>
+            </div>
+            <div class="service-body">
+                <div class="service-half">
+                    <div class="service-container">
+                        <div class="container-image">
+                            <img src="images/neuro.png" alt="">
+                        </div>
+                        <div class="container-text">
+                            <h3>
+                                Neurological
+                            </h3>
+                            <p>
+                                Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                                sagittis suscipit ultrices.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="service-container">
+                        <div class="container-image">
+                            <img src="images/cardio.png" alt="">
+                        </div>
+                        <div class="container-text">
+                            <h3>
+                                Cardiological
+                            </h3>
+                            <p>
+                                Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                                sagittis suscipit ultrices.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="service-container">
+                        <div class="container-image">
+                            <img src="images/emergency.png" alt="">
+                        </div>
+                        <div class="container-text">
+                            <h3>
+                                24 hrs emergency
+                            </h3>
+                            <p>
+                                Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                                sagittis suscipit ultrices.
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="service-half right">
+                    <img src="images/pharma.jpeg" alt="">
+                </div>
+
+            </div>
+
+
+
         </section>
     </main>
 </body>
