some section added

--- a/index.html
+++ b/index.html
@@ -125,15 +125,81 @@
                     </div>
                 </div>
 
-
                 <div class="service-half right">
                     <img src="images/pharma.jpeg" alt="">
                 </div>
-
+            </div>
+        </section>
+        <section id="department">
+            <div class="department-head">
+                <h2>Our Department</h2>
+                <p>
+                    Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                    suscipit ultrices.
+                </p>
+            </div>
+            <div class="department-body">
+                <div class="sector">
+                    <img src="images/cardio.png" alt="">
+                    <h4>LASER EYE CARE</h4>
+                </div>
+                <div class="sector">
+                    <img src="images/cardio.png" alt="">
+                    <h4>HEART CARE</h4>
+                </div>
+                <div class="sector">
+                    <img src="images/cardio.png" alt="">
+                    <h4>NEUROLOGY</h4>
+                </div>
+                <div class="sector">
+                    <img src="images/cardio.png" alt="">
+                    <h4>DENTAL CARE</h4>
+                </div>
+                <div class="sector">
+                    <img src="images/cardio.png" alt="">
+                    <h4>EAR CARE</h4>
+                </div>
+                <div class="sector">
+                    <img src="images/cardio.png" alt="">
+                    <h4>
+                        EMERGENCY
+                    </h4>
+                </div>
             </div>
 
+        </section>
+        <section id="eyecare">
+            <div class="eyecare-image">
+                <img src="images/eyecare.jpg" alt="">
+            </div>
+            <div class="eyecare-desc">
+                <h2>Care Of eye</h2>
+                <p>
+                    Your eyes are an important part of your health. Most people rely on their eyes to see and make sense
+                    of
+                    the world around them. But some eye diseases can lead to vision loss, so it is important to identify
+                    and
+                    treat eye diseases as early as possible. You should get your eyes checked as often as your health
+                    care
+                    provider recommends it, or if you have any new vision problems. And just as it is important to keep
+                    your
+                    body healthy, you also need to keep your eyes healthy.
+                </p>
+                <p>
+                    Everyone needs to have their eyesight tested to check for vision and eye problems. Children usually
+                    have vision screening in school or at their health care provider's office during a checkup. Adults
+                    may also get vision screenings during their checkups. But many adults need more than a vision
+                    screening. They need a comprehensive dilated eye exam.
+                </p>
+            </div>
 
-
+        </section>
+        <section>
+            <h2>We Care</h2>
+            <p>
+                Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit
+                ultrices.
+            </p>
         </section>
     </main>
 </body>
