--- a/index.html
+++ b/index.html
@@ -194,14 +194,133 @@
             </div>
 
         </section>
-        <section>
-            <h2>We Care</h2>
-            <p>
-                Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit
-                ultrices.
-            </p>
+        <section id="we-care">
+            <div class="wecare-head">
+                <h2>We Care</h2>
+                <p>
+                    Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                    suscipit
+                    ultrices.
+                </p>
+            </div>
+
+            <div class="wecare-body">
+                <div class="wecare-card">
+                    <div class="card-image">
+                        <img src="images/child-care.jpeg" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>child care</h3>
+                        <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis
+                            suscipit ultrices.</p>
+                        <a href="">Read More</a>
+                    </div>
+
+                </div>
+
+                <div class="wecare-card">
+                    <div class="card-image">
+                        <img src="images/dental-care.jpeg" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>dental care</h3>
+                        <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis
+                            suscipit ultrices.</p>
+                        <a href="">Read More</a>
+                    </div>
+
+                </div>
+
+                <div class="wecare-card">
+                    <div class="card-image">
+                        <img src="images/birth-care.jpeg" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>birth care</h3>
+                        <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis
+                            suscipit ultrices.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section id="presence">
+            <div class="presence-header">
+                <h2>GLOBAL PRESENCE</h2>
+                <p>
+                    Sample text. Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit nullam nunc justo sagittis
+                    suscipit ultrices.
+                </p>
+            </div>
+            <div class="presence-map">
+                <img src="images/map.png" alt="">
+            </div>
+        </section>
+        <section id="specialist">
+            <div class="specialist-head">
+                <h2>our specialist</h2>
+                <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                    suscipit ultrices.</p>
+            </div>
+            <div class="specialist-body">
+                <div class="specialist-card">
+                    <img src="images/marry.png" alt="">
+                    <div class="nameplate" style="background-color:#b6cce7">
+                        <h4>
+                            DR MARRY HUDSON
+                        </h4>
+                        <p>Cardio Specialist</p>
+                    </div>
+                </div>
+                <div class="specialist-card">
+                    <img src="images/tom.png" alt="">
+                    <div class="nameplate" style="background-color:#adb6c0">
+                        <h4>
+                            DR TOM FORD
+                        </h4>
+                        <p>Neuro Specialist</p>
+                    </div>
+                </div>
+                <div class="specialist-card">
+                    <img src="images/linda.png" alt="">
+                    <div class="nameplate" style="background-color:#858E99">
+                        <h4>
+                            DR LINDA LARSON
+                        </h4>
+                        <p>Dental Specialist</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section id="contact">
+            <div class="contact-container">
+                <div class="contact-head">
+                    <h2>get in touch</h2>
+                    <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis
+                        suscipit ultrices.</p>
+                </div>
+                <div class="contact-body">
+                    <form action="mailto:mdrakibulh71@gmail.com">
+                        <p><input type="text" name="name" id="name" placeholder="Enter Your Name"></p>
+                        <p><input type="email" name="email" id="email" placeholder="Enter A Valid Email"></p>
+                        <p><textarea name="" id="" cols="30" rows="10" placeholder="Enter Your Message Here"></textarea>
+                        </p>
+                        <button type="submit" class="btn-sub">Submit</button>
+                    </form>
+                </div>
+            </div>
+
         </section>
     </main>
+
+    <footer>
+        <p>&copy Made By Md Rakibul Hasan 2022</p>
+    </footer>
 </body>
 
 </html>
